@@ -1,5 +1,6 @@
 0.11.103
 	+ Use the new EBox::Model::Row API
+	+ Add help to fields in service model
 0.11.102
 	+ Remove optional attribute from PortRange as it didn't make sense
 	  and we were getting warinings
